# incling_example_project

./: .gitignore  README.md  manage.py  pyproject.toml
incling_example/: settings.py  urls.py  wsgi.py
research_software/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
research_software/migrations/: 0001_initial.py  0002_auto_20201109_2144.py  0002_auto_20201110_1831.py  0002_auto_20201110_2046.py  0003_auto_20201109_2218.py  0003_auto_20201110_1834.py  0003_auto_20201110_2047.py  0004_auto_20201109_2233.py  0004_auto_20201110_1849.py  0004_auto_20201110_2048.py  0005_auto_20201109_2236.py  0005_auto_20201110_1922.py  0005_auto_20201110_2058.py  0006_auto_20201109_2247.py  0006_auto_20201110_1933.py  0006_auto_20201110_2147.py  0007_auto_20201109_2254.py
tests/: test_incling_django.py
