[tool.poetry]
name = "incling_django"
version = "0.1.0"
description = ""
authors = ["Pedro Dias <p.afonsosd1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2"
djangorestframework = "^3.12.2"
black = "^20.8b1"
mypy = "^0.790"
ipython = "^7.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
